--- a/src/Ascalon.DumperService.SreamService/Ascalon.DumperService.SreamService.csproj
+++ b/src/Ascalon.DumperService.SreamService/Ascalon.DumperService.SreamService.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ascalon.Kafka" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Kafka\" />
   </ItemGroup>
 
 </Project>
