--- a/src/Ascalon.DumperService.Features/Ascalon.DumperService.Features.csproj
+++ b/src/Ascalon.DumperService.Features/Ascalon.DumperService.Features.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Ascalon.DumperService.SreamService\Ascalon.DumperService.SreamService.csproj" />
+    <ProjectReference Include="..\Ascalon.DumperService.SreamService\Ascalon.DumperService.SreamService.csproj" />
   </ItemGroup>
 
 </Project>
