--- a/src/Ascalon.DumperService/appsettings.Development.json
+++ b/src/Ascalon.DumperService/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "KafkaProducerOptions": {
+    "Config": {
+      "BootstrapServers": "localhost:29092"
+    }
   }
 }
