--- a/src/Ascalon.DumperService/appsettings.json
+++ b/src/Ascalon.DumperService/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "PostDumperConsumerServiceOptions": {
+    "Config": {
+      "GroupId": "DumperService",
+      "EnableAutoCommit": false,
+      "AutoOffsetReset": "Earliest",
+      "TopicForConsume": "post_dumper_data"
+    },
+    "TopicForProduceCreatedOrders": "create_order_results",
+    "TopicForProduceErrors": "create_order_errors"
+  },
   "AllowedHosts": "*"
 }
