#master - перенастроил конфиг на получение данных

--- a/src/Ascalon.DumperService/appsettings.Development.json
+++ b/src/Ascalon.DumperService/appsettings.Development.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "PostDumperConsumerServiceOptions": {
+    "Config": {
+      "BootstrapServers": "localhost:29092"
+    }
+  },
   "KafkaProducerOptions": {
     "Config": {
       "BootstrapServers": "localhost:29092"
