--- a/src/Ascalon.DumperService/appsettings.json
+++ b/src/Ascalon.DumperService/appsettings.json
@@ -13,8 +13,7 @@
       "AutoOffsetReset": "Earliest",
       "TopicForConsume": "post_dumper_data"
     },
-    "TopicForProduceCreatedOrders": "create_order_results",
-    "TopicForProduceErrors": "create_order_errors"
+    "TopicForProducePostDumper": "post_dumper_results"
   },
   "AllowedHosts": "*"
 }
