--- a/src/Ascalon.DumperService/appsettings.Development.json
+++ b/src/Ascalon.DumperService/appsettings.Development.json
@@ -8,12 +8,12 @@
   },
   "PostDumperConsumerServiceOptions": {
     "Config": {
-      "BootstrapServers": "localhost:29092"
+      "BootstrapServers": "kafka:29092"
     }
   },
   "KafkaProducerOptions": {
     "Config": {
-      "BootstrapServers": "localhost:29092"
+      "BootstrapServers": "kafka:29092"
     }
   }
 }
