#master - изменил систему отсылки сообщений

--- a/src/Ascalon.DumperService/appsettings.json
+++ b/src/Ascalon.DumperService/appsettings.json
@@ -11,9 +11,16 @@
       "GroupId": "DumperService",
       "EnableAutoCommit": false,
       "AutoOffsetReset": "Earliest",
-      "TopicForConsume": "post_dumper_data"
+      "TopicForConsume": "post_dumper_data",
+      "BootstrapServers": "35.189.215.83:9092"
     },
     "TopicForProducePostDumper": "post_dumper_results"
   },
+  "KafkaProducerOptions": {
+    "Config": {
+      "BootstrapServers": "35.189.215.83:9092"
+    }
+  },
   "AllowedHosts": "*"
+
 }
