--- a/src/Ascalon.DumperService/appsettings.json
+++ b/src/Ascalon.DumperService/appsettings.json
@@ -12,6 +12,7 @@
       "EnableAutoCommit": false,
       "AutoOffsetReset": "Earliest",
       "TopicForConsume": "post_dumper_data",
+      "PartitionAssignmentStrategy": "RoundRobin",
       "BootstrapServers": "35.189.215.83:9092"
     },
     "TopicForProducePostDumper": "post_dumper_results"
